Update docker image

--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -1,18 +1,22 @@
-FROM mambaorg/micromamba:git-4073267-jammy-cuda-11.8.0
+FROM condaforge/mambaforge:latest AS mamba
 
-ARG MAMBA_DOCKERFILE_ACTIVATE=1
+RUN mamba create --copy -y -p /env \
+    python=3.11 -c conda-forge && \
+    mamba clean -ayf
 
-RUN micromamba install --yes --name base \
-    python=3.11 --channel conda-forge && \
-    micromamba clean --all --yes
+RUN mamba install -y -p /env \
+    pytorch torchvision torchaudio pytorch-cuda \
+    -c pytorch -c nvidia -c conda-forge && \
+    mamba clean -ayf
 
-RUN micromamba install pytorch torchvision torchaudio pytorch-cuda=11.8 \
-    --channel pytorch \
-    --channel nvidia \
-    --channel conda-forge && \
-    micromamba clean --all --yes
+RUN mamba run -p /env \
+    python -m pip install --no-cache-dir --upgrade \
+    "jax[cuda11_pip]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html && \
+    mamba run -p /env \
+    python -m pip cache purge
 
-RUN pip install --no-cache-dir --upgrade "jax[cuda11_pip]" \
-    -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+FROM ubuntu:latest
 
-ENV PATH "$MAMBA_ROOT_PREFIX/bin:$PATH"
+COPY --from=mamba /env /env
+
+ENV PATH "/env/bin:$PATH"
