--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -18,8 +18,8 @@ jobs:
       matrix:
         ubuntu-version: [latest]
         mamba-version: [latest]
-        cuda-version: [11]
-        python-version: [3.9, 3.10, 3.11]
+        cuda-version: ["11"]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
       - name: Checkout
