--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -42,5 +42,5 @@ jobs:
         with:
           context: ./images
           push: true
-          tags: martinkim0/scvi-tools:ubuntu-${{ matrix.ubuntu-version }}-mamba-${{ matrix.mamba-version}}-python-${{ matrix.python-version }}-cuda-${{ matrix.cuda-version }}
+          tags: martinkim0/scvi-tools
           build-args: ubuntu_version=${{ matrix.ubuntu-version }}, mamba_version=${{ matrix.mamba-version }}, python_version=${{ matrix.python-version }}, cuda_version=${{ matrix.cuda-version }}
