--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,6 +1,36 @@
 name: push-image
 
 on:
+  workflow_dispatch:
+    inputs:
+      ubuntu-version:
+        description: Ubuntu version
+        required: true
+        default: latest
+        type: string
+      mamba-version:
+        description: Mamba version
+        required: true
+        default: latest
+        type: string
+      python-version:
+        description: Python version
+        required: true
+        default: "3.11"
+        type: choice
+        options:
+          - "3.11"
+          - "3.10"
+          - "3.9"
+      cuda-version:
+        description: CUDA major version
+        required: true
+        default: "11"
+        type: choice
+        options:
+          - "12"
+          - "11"
+
   push:
     branches:
       - "main"
@@ -11,15 +41,7 @@ concurrency:
 
 jobs:
   docker:
-    runs-on: ubuntu-${{ matrix.ubuntu-version }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        ubuntu-version: [latest]
-        mamba-version: [latest]
-        cuda-version: ["11"]
-        python-version: ["3.9", "3.10", "3.11"]
+    runs-on: ubuntu-${{ inputs.ubuntu-version }}
 
     steps:
       - name: Checkout
@@ -42,9 +64,9 @@ jobs:
         with:
           context: ./images
           push: true
-          tags: martinkim0/scvi-tools:ubuntu-${{ matrix.ubuntu-version }}-mamba-${{ matrix.mamba-version}}-python-${{ matrix.python-version }}-cuda-${{ matrix.cuda-version }}
+          tags: martinkim0/scvi-tools:ubuntu-${{ inputs.ubuntu-version }}-mamba-${{ inputs.mamba-version}}-python-${{ inputs.python-version }}-cuda-${{ inputs.cuda-version }}
           build-args: |
-            ubuntu_version=${{ matrix.ubuntu-version }}
-            mamba_version=${{ matrix.mamba-version }}
-            python_version=${{ matrix.python-version }}
-            cuda_version=${{ matrix.cuda-version }}
+            ubuntu_version=${{ inputs.ubuntu-version }}
+            mamba_version=${{ inputs.mamba-version }}
+            python_version=${{ inputs.python-version }}
+            cuda_version=${{ inputs.cuda-version }}
