--- a/.github/workflows/linux_cuda_base.yaml
+++ b/.github/workflows/linux_cuda_base.yaml
@@ -36,14 +36,11 @@ on:
 
 jobs:
   docker:
-    runs-on: [self-hosted, Linux, X64, CUDA]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
