--- a/.github/workflows/linux_cuda_base.yaml
+++ b/.github/workflows/linux_cuda_base.yaml
@@ -56,7 +56,7 @@ jobs:
         with:
           context: ./images/linux/cuda/base
           push: true
-          tags: martinkim0/scvi-tools:ubuntu-${{ inputs.ubuntu-version }}-mamba-${{ inputs.mamba-version}}-python-${{ inputs.python-version }}-cuda-${{ inputs.cuda-version }}
+          tags: martinkim0/scvi-tools:test
           build-args: |
             UBUNTU_VERSION=${{ inputs.ubuntu-version }}
             MAMBA_VERSION=${{ inputs.mamba-version }}
