--- a/.github/workflows/linux_cuda_base.yaml
+++ b/.github/workflows/linux_cuda_base.yaml
@@ -1,42 +1,19 @@
 name: linux-cuda-base
 
 on:
+  schedule:
+    - cron: "0 12 * * 0"  # runs at 12:00 UTC -> 05:00 PST on Sunday
   workflow_dispatch:
-    inputs:
-      ubuntu-version:
-        description: Ubuntu version
-        required: true
-        default: latest
-        type: string
-
-      mamba-version:
-        description: Mamba version
-        required: true
-        default: latest
-        type: string
-
-      python-version:
-        description: Python version
-        required: true
-        default: "3.11"
-        type: choice
-        options:
-          - "3.9"
-          - "3.10"
-          - "3.11"
-
-      cuda-version:
-        description: CUDA major version
-        required: true
-        default: "11"
-        type: choice
-        options:
-          - "11"
-          - "12"
 
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64]
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.11"]
+        cuda-version: ["11"]
 
     steps:
       - name: Checkout
@@ -58,7 +35,5 @@ jobs:
           push: true
           tags: martinkim0/scvi-tools:test
           build-args: |
-            UBUNTU_VERSION=${{ inputs.ubuntu-version }}
-            MAMBA_VERSION=${{ inputs.mamba-version }}
-            PYTHON_VERSION=${{ inputs.python-version }}
-            CUDA_VERSION=${{ inputs.cuda-version }}
+            PYTHON_VERSION=${{ matrix.python-version }}
+            CUDA_VERSION=${{ matrix.cuda-version }}
