--- a/.github/workflows/linux_cuda_base.yaml
+++ b/.github/workflows/linux_cuda_base.yaml
@@ -1,49 +1,23 @@
 name: linux-cuda-base
 
 on:
+  schedule:
+    - cron: "0 12 * * 0"  # runs at 12:00 UTC -> 05:00 PST on Sunday
   workflow_dispatch:
-    inputs:
-      ubuntu-version:
-        description: Ubuntu version
-        required: true
-        default: latest
-        type: string
-
-      mamba-version:
-        description: Mamba version
-        required: true
-        default: latest
-        type: string
-
-      python-version:
-        description: Python version
-        required: true
-        default: "3.11"
-        type: choice
-        options:
-          - "3.9"
-          - "3.10"
-          - "3.11"
-
-      cuda-version:
-        description: CUDA major version
-        required: true
-        default: "11"
-        type: choice
-        options:
-          - "11"
-          - "12"
 
 jobs:
   docker:
-    runs-on: [self-hosted, Linux, X64, CUDA]
+    runs-on: [self-hosted, Linux, X64]
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.9", "3.10", "3.11"]
+        cuda-version: ["11"]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -59,9 +33,7 @@ jobs:
         with:
           context: ./images/linux/cuda/base
           push: true
-          tags: martinkim0/scvi-tools:ubuntu-${{ inputs.ubuntu-version }}-mamba-${{ inputs.mamba-version}}-python-${{ inputs.python-version }}-cuda-${{ inputs.cuda-version }}
+          tags: martinkim0/scvi-tools:$py{{ matrix.python-version }}-cu${{ matrix.cuda-version }}
           build-args: |
-            UBUNTU_VERSION=${{ inputs.ubuntu-version }}
-            MAMBA_VERSION=${{ inputs.mamba-version }}
-            PYTHON_VERSION=${{ inputs.python-version }}
-            CUDA_VERSION=${{ inputs.cuda-version }}
+            PYTHON_VERSION=${{ matrix.python-version }}
+            CUDA_VERSION=${{ matrix.cuda-version }}
