--- a/images/linux/cuda/runtime/Dockerfile
+++ b/images/linux/cuda/runtime/Dockerfile
@@ -5,10 +5,10 @@ FROM martinkim0/scvi-tools:py${PYTHON_VERSION}-cu${CUDA_VERSION}-base
 ARG SCVI_TOOLS_VERSION=latest
 ENV SCVI_TOOLS_VERSION=${SCVI_TOOLS_VERSION}
 RUN if [ "$SCVI_TOOLS_VERSION" = "latest" ]; then \
-        pip install "scvi-tools @ git+https://github.com/scverse/scvi-tools" && \
+        pip install --no-cache-dir "scvi-tools @ git+https://github.com/scverse/scvi-tools" && \
     elif [ "$SCVI_TOOLS_VERSION" = "stable" ]; then \
-        pip install "scvi-tools" && \
+        pip install --no-cache-dir "scvi-tools" && \
     else \
-        pip install "scvi-tools==${SCVI_TOOLS_VERSION}" && \
+        pip install --no-cache-dir "scvi-tools==${SCVI_TOOLS_VERSION}" && \
     fi && \
         pip cache purge
