--- a/images/linux/cuda/devel/Dockerfile
+++ b/images/linux/cuda/devel/Dockerfile
@@ -5,13 +5,10 @@ FROM martinkim0/scvi-tools:py${PYTHON_VERSION}-cu${CUDA_VERSION}-base
 ARG SCVI_TOOLS_VERSION=latest
 ENV SCVI_TOOLS_VERSION=${SCVI_TOOLS_VERSION}
 RUN if [ "$SCVI_TOOLS_VERSION" = "latest" ]; then \
-        pip install --no-cache-dir "scvi-tools[all] @ git+https://github.com/scverse/scvi-tools" && \
-        pip cache purge ; \
+        pip install --no-cache-dir "scvi-tools[all] @ git+https://github.com/scverse/scvi-tools" \
     elif [ "$SCVI_TOOLS_VERSION" = "stable" ]; then \
-        pip install --no-cache-dir "scvi-tools[all]" && \
-        pip cache purge ; \
+        pip install --no-cache-dir "scvi-tools[all]" \
     else \
-        pip install --no-cache-dir "scvi-tools[all]==${SCVI_TOOLS_VERSION}" && \
-        pip cache purge ; \
+        pip install --no-cache-dir "scvi-tools[all]==${SCVI_TOOLS_VERSION}" \
     fi && \
         pip cache purge
