--- a/.github/workflows/linux_cuda_tutorials_latest.yaml
+++ b/.github/workflows/linux_cuda_tutorials_latest.yaml
@@ -33,7 +33,7 @@ jobs:
         with:
           context: ./docker/tutorials
           push: true
-          tags: martinkim0/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-runtime-latest
+          tags: martinkim0/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-tutorials-latest
           build-args: |
             PYTHON_VERSION=${{ matrix.python-version }}
             CUDA_VERSION=${{ matrix.cuda-version }}
