--- a/.github/workflows/linux_cuda_runtime_branch.yaml
+++ b/.github/workflows/linux_cuda_runtime_branch.yaml
@@ -51,7 +51,7 @@ jobs:
         with:
           context: ./docker/runtime
           push: true
-          tags: martinkim0/scvi-tools:py${{ inputs.python-version }}-cu${{ inputs.cuda-version }}-runtime-${{ inputs.branch-name }}
+          tags: scverse/scvi-tools:py${{ inputs.python-version }}-cu${{ inputs.cuda-version }}-runtime-${{ inputs.branch-name }}
           build-args: |
             PYTHON_VERSION=${{ inputs.python-version }}
             CUDA_VERSION=${{ inputs.cuda-version }}
