--- a/.github/workflows/linux_cuda_tutorials.yaml
+++ b/.github/workflows/linux_cuda_tutorials.yaml
@@ -39,7 +39,7 @@ jobs:
         with:
           context: ./docker/tutorials
           push: true
-          tags: martinkim0/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-tutorials-${{ inputs.scvi-tools-version}}
+          tags: scverse/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-tutorials-${{ inputs.scvi-tools-version}}
           build-args: |
             PYTHON_VERSION=${{ matrix.python-version }}
             CUDA_VERSION=${{ matrix.cuda-version }}
