--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -7,16 +7,15 @@ RUN mamba create --copy -y -p /env \
 
 ARG CUDA_VERSION=11
 RUN mamba install -y -p /env \
-    pytorch torchvision torchaudio pytorch-cuda=${CUDA_VERSION} cuda-nvcc=${CUDA_VERSION} \
-    -c pytorch -c nvidia -c conda-forge && \
+    cudnn=${CUDA_VERSION} cudatoolkit=${CUDA_VERSION} cuda-nvcc=${CUDA_VERSION} \
+    -c anaconda -c nvidia && \
     mamba clean -ayf
 
 ARG CUDA_VERSION=11
-RUN mamba run -p /env \
-    python -m pip install --no-cache-dir --upgrade \
-    jax[cuda${CUDA_VERSION}_pip] -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html && \
-    mamba run -p /env \
-    python -m pip cache purge
+RUN mamba install -y -p /env \
+    jaxlib=*=*cuda* jax pytorch torchvision torchaudio pytorch-cuda=${CUDA_VERSION} \
+    -c pytorch -c nvidia -c conda-forge && \
+    mamba clean -ayf
 
 RUN mamba install -y -p /env \
     git -c anaconda && \
