Clean up workflows

--- a/docker/runtime/Dockerfile
+++ b/docker/runtime/Dockerfile
@@ -9,7 +9,7 @@ ENV BRANCH_NAME=${BRANCH_NAME}
 RUN if [ "$SCVI_TOOLS_VERSION" = "latest" ]; then \
         pip install --no-cache-dir "scvi-tools @ git+https://github.com/scverse/scvi-tools@${BRANCH_NAME}" ; \
     elif [ "$SCVI_TOOLS_VERSION" = "stable" ]; then \
-        pip install --no-cache-dir "scvi-tools" ; \
+        pip install -U --no-cache-dir "scvi-tools" ; \
     else \
         pip install --no-cache-dir "scvi-tools==${SCVI_TOOLS_VERSION}" ; \
     fi && \
