--- a/.github/workflows/linux_cuda_base.yaml
+++ b/.github/workflows/linux_cuda_base.yaml
@@ -1,13 +1,16 @@
-name: linux-cuda-base
+name: Linux (CUDA, base)
 
 on:
   schedule:
-    - cron: "0 12 * * 0"  # runs at 12:00 UTC -> 05:00 PST on Sunday
+    - cron: "0 12 * * 0" # runs at 12:00 UTC/05:00 PST on Sunday
   workflow_dispatch:
 
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64, CUDA]
+    defaults:
+      run:
+        shell: bash -e {0} # -e to fail on error
 
     strategy:
       fail-fast: false
@@ -16,20 +19,16 @@ jobs:
         cuda-version: ["11"]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v5
         with:
           context: ./docker/base
           push: true
