--- a/.github/workflows/linux_cuda_tutorials.yaml
+++ b/.github/workflows/linux_cuda_tutorials.yaml
@@ -1,19 +1,27 @@
-name: linux-cuda-tutorials
+name: Linux (CUDA, tutorials)
 
 on:
+  schedule:
+    - cron: "00 7 * * *" # runs at 07:00 UTC/12:00 PST every day
   workflow_dispatch:
     inputs:
-      scvi-tools-version:
-        description: "scvi-tools version"
+      version:
+        description: "latest/stable/sem_ver"
         required: true
-        default: "stable"
-        type: choice
-        options:
-        - "stable"
+        default: "latest"
+        type: string
+      branch:
+        description: "branch name"
+        required: true
+        default: "main"
+        type: string
 
 jobs:
   docker:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -e {0} # -e to fail on error
 
     strategy:
       fail-fast: false
@@ -22,25 +30,22 @@ jobs:
         cuda-version: ["11"]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v5
         with:
-          context: ./docker/tutorials
+          context: ./docker/linux
           push: true
-          tags: scverse/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-tutorials-${{ inputs.scvi-tools-version}}
+          tags: scverse/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-devel-${{ inputs.scvi-tools-version }}
           build-args: |
             PYTHON_VERSION=${{ matrix.python-version }}
             CUDA_VERSION=${{ matrix.cuda-version }}
-            SCVI_TOOLS_VERSION=${{ inputs.scvi-tools-version}}
+            SCVI_TOOLS_VERSION=${{ inputs.scvi-tools-version }}
+            BRANCH_NAME=${{ inputs.branch }}
