--- a/docker/linux/Dockerfile
+++ b/docker/linux/Dockerfile
@@ -4,7 +4,7 @@ FROM scverse/scvi-tools:py${PYTHON_VERSION}-cu${CUDA_VERSION}-base
 
 ARG SCVI_TOOLS_VERSION=latest
 ARG BRANCH_NAME=main
-ARG DEPENDENCIES
+ARG DEPENDENCIES=""
 ENV SCVI_TOOLS_VERSION=${SCVI_TOOLS_VERSION}
 ENV BRANCH_NAME=${BRANCH_NAME}
 ENV DEPENDENCIES=${DEPENDENCIES}
