--- a/.github/workflows/linux_cuda_tutorials.yaml
+++ b/.github/workflows/linux_cuda_tutorials.yaml
@@ -41,7 +41,7 @@ jobs:
 
       - uses: docker/build-push-action@v5
         with:
-          context: ./docker/linux
+          context: ./docker/optional
           push: true
           tags: scverse/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-devel-${{ inputs.scvi-tools-version }}
           build-args: |
@@ -49,3 +49,4 @@ jobs:
             CUDA_VERSION=${{ matrix.cuda-version }}
             SCVI_TOOLS_VERSION=${{ inputs.scvi-tools-version }}
             BRANCH_NAME=${{ inputs.branch }}
+            DEPENDENCIES=tutorials
