--- a/docker/linux/Dockerfile
+++ b/docker/linux/Dockerfile
@@ -8,9 +8,9 @@ ARG DEPENDENCIES=""
 ENV SCVI_TOOLS_VERSION=${SCVI_TOOLS_VERSION}
 ENV BRANCH_NAME=${BRANCH_NAME}
 ENV DEPENDENCIES=${DEPENDENCIES}
-RUN if [ "$SCVI_TOOLS_VERSION" = "latest" ]; then \
+RUN if [ "${SCVI_TOOLS_VERSION}" = "latest" ]; then \
         pip install --no-cache-dir "scvi-tools[${DEPENDENCIES}] @ git+https://github.com/scverse/scvi-tools@${BRANCH_NAME}" ; \
-    elif [ "$SCVI_TOOLS_VERSION" = "stable" ]; then \
+    elif [ "${SCVI_TOOLS_VERSION}" = "stable" ]; then \
         pip install -U --no-cache-dir "scvi-tools[${DEPENDENCIES}]" ; \
     else \
         pip install --no-cache-dir "scvi-tools[${DEPENDENCIES}]==${SCVI_TOOLS_VERSION}" ; \
