--- a/docker/runtime/Dockerfile
+++ b/docker/runtime/Dockerfile
@@ -6,9 +6,9 @@ ARG SCVI_TOOLS_VERSION=latest
 ARG BRANCH_NAME=main
 ENV SCVI_TOOLS_VERSION=${SCVI_TOOLS_VERSION}
 ENV BRANCH_NAME=${BRANCH_NAME}
-RUN if [ "$SCVI_TOOLS_VERSION" = "latest" ]; then \
+RUN if [ "${SCVI_TOOLS_VERSION}" = "latest" ]; then \
         pip install --no-cache-dir "scvi-tools @ git+https://github.com/scverse/scvi-tools@${BRANCH_NAME}" ; \
-    elif [ "$SCVI_TOOLS_VERSION" = "stable" ]; then \
+    elif [ "${SCVI_TOOLS_VERSION}" = "stable" ]; then \
         pip install -U --no-cache-dir "scvi-tools" ; \
     else \
         pip install --no-cache-dir "scvi-tools==${SCVI_TOOLS_VERSION}" ; \
