--- a/.github/workflows/linux_cuda_devel.yaml
+++ b/.github/workflows/linux_cuda_devel.yaml
@@ -31,22 +31,28 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/setup-buildx-action@v3
-
       - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Set default inputs
+        id: defaults
+        run: |
+          INPUT_VERSION=${{ inputs.version }}
+          echo "::set-output name=version::${INPUT_VERSION:-"latest"}"
+          INPUT_BRANCH=${{ inputs.branch }}
+          echo "::set-output name=branch::${INPUT_BRANCH:-"main"}"
+
       - uses: docker/build-push-action@v5
         with:
-          context: ./docker/optional
+          context: ./docker/linux
           push: true
-          tags: scverse/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-devel-${{ inputs.scvi-tools-version }}
+          tags: scverse/scvi-tools:py${{ matrix.python-version }}-cu${{ matrix.cuda-version }}-devel-${{ steps.defaults.outputs.version }}
           build-args: |
             PYTHON_VERSION=${{ matrix.python-version }}
             CUDA_VERSION=${{ matrix.cuda-version }}
-            SCVI_TOOLS_VERSION=${{ inputs.scvi-tools-version }}
-            BRANCH_NAME=${{ inputs.branch }}
+            SCVI_TOOLS_VERSION=${{ steps.defaults.outputs.version }}
+            BRANCH_NAME=${{ steps.defaults.outputs.branch }}
             DEPENDENCIES=dev
